# project-management-ai

./: .env.example  .gitignore  .gitmodules  README.md  TODO.md  alembic.ini  app.py  app_oauth.py  docker-compose.yml  manifest.json  pyproject.toml
.slack/: config.json
.slack/cache/: manifests.json
ai/agents/mcp/: jira_user_server.py  memory_agent.py  time_server.py
ai/agents/react_agents/: all_tools.py  examples_agent.py  thread_state.py  tool_wrappers.py
ai/prompts/: __init__.py  langfuse_prompts.py
ai/providers/: anthropic.py  openai.py  vertexai.py
config/: __init__.py  settings.py  tooling.py  tooling.toml
db/: __init__.py  base.py  models.py  session.py
docker/postgres-init/: 01-create-langfuse.sql
listeners/: user_management_platforms.py  user_preferences.py
listeners/actions/: __init__.py  approval_actions.py  delete_user_rule.py  memory_forget_actions.py  question_actions.py  set_management_platforms.py  set_user_profile.py  set_user_selection.py
listeners/agent_interrupts/: __init__.py  approvals.py  common.py  questions.py  router.py  tools.py
listeners/commands/: __init__.py  ask_command.py  ask_llm.py  clear_thread.py  memory_commands.py  rule.py
listeners/events/: app_home_opened.py  app_mentioned.py  app_messaged.py
listeners/functions/: summary_function.py
listeners/listener_utils/: approvals.py  interrupts.py  listener_constants.py  questions.py
migrations/: env.py
migrations/versions/: 20250208_01_create_users_table.py  20250210_01_add_management_platforms.py
state_store/: approval_requests.py  question_requests.py
(+4 files in other folders)
